@@ -1,3 +1,9 @@
+Tue Sep  4 16:23:46 2001  Joe Hoffert  <joeh@cs.wustl.edu>
+
+	* tests/vxworks_stub.c: 
+	* tests/Cond_Var_Test.c: 
+	  Rectified warnings about type of argc.
+
 Tue Sep  4 15:26:46 2001  Joe Hoffert  <joeh@cs.wustl.edu>
 
 	* tests/Cond_Var_Test.c: 
